[package]
name = "plaintext"
version = "0.1.0"
authors = ["Arend van Beelen jr. <arendjr@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
evmap = "10.0"
futures = "0.3.5"
lazy_static = "1.4.0"
maplit = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
