[package]
name = "plaintext"
version = "0.1.0"
authors = ["Arend van Beelen jr. <arendjr@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
bitflags = "1.2.1"
bytes = "0.5"
chrono = "0.4"
futures = "0.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
pbkdf2 = "0.5.0"
rand = "0.7.3"
regex = "1.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.20", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
